# hrov_martech2023

./: .gitignore  CMakeLists.txt  CMakeListsbackup.txt  README.md  package.xml  setup.py
action/: PID.action
config/: girona1000.yaml  giroviz.rviz
config/bravo/: controllers.yaml
config/bt/: test2.xml  tree1.xml  tree_base.xml  tree_test.xml
config/cola2config/: controller.yaml  default_param_handler.yaml  logitech_fx10_to_teleoperation.yaml  safe_depth_altitude.yaml
config/tp/: tasks.yaml
data/: pipeviz.blend  pipeviz.blend1  pipeviz.dae  valve.blend  valve.dae
data/markers/: Cube.xcf  marker.blend  marker.blend1  marker.mtl
data/ship/: ship.mtl
graficos/: test.html
include/behaviors/: followPath copy.h  followPath.h  planPath.h  print.h  ros_utils2.h  waitForMsg.h
launch/: bt.launch  girona1000_exploration.launch  tp.launch
launch/utils/: girona1000_colasim.launch  octomap.launch
msg/: BaseGoal.msg  PointArray.msg
scenarios/: buoy.scn  corridor.scn  cylinder.scn  girona1000.scn  girona1000_tank.scn  girona1000bravo.scn  pipes.scn  porto_do_castelo.scn  ship.scn  tank.scn  valve.scn
scripts/: aruco_pose.cpp  clustering.cpp  clustering.py  clustering_bt.cpp  clustering_old.py  clustering_plot.py  clustering_srv.cpp  intervention.cpp  lsrptcld.py  octo_proc.cpp  octo_proc1.cpp  octo_proc2.cpp  octo_proc3.cpp  pipefit.cpp  planning.cpp  planning2.cpp  planning2_srv.cpp  planning2dubs.cpp  planning2dubs_bench.cpp  planning2dubs_srv.cpp  planning3dubs_srv.cpp  planningR_srv copy.cpp  world_req.py
scripts/bt/: tree_main.cpp
scripts/legacy/: clustering_plot.py  planning2dubs_bench.cpp  planning2dubs_srv2d.cpp  planningR_srv.cpp
scripts/octo_backups/: octo_proc copy.cpp  octo_proc_func1.cpp  octo_proc_polling.cpp
scripts/plan_backup/: planning2 copy 2.cpp  planning2 copy.cpp
scripts/sm/: exploration.py  intervention.py  sm.py
scripts/utils/: arm_handler.py  laser2ptcloud.cpp  last_tf.py  odom2tf.cpp  omplConfig.cmake  path_exec.cpp  path_exec2 copy 2.cpp  path_exec2 copy.cpp  path_exec2.cpp  path_manager.py  pid_action.cpp  world_req.py
src/bt/: followPath.cpp  followPathService.cpp  planPath.cpp  print.cpp  waitForMsg.cpp
src/hrov_utils/: path_manager.py
src/utils/: path_manager.py
srv/: PlanGoal.srv
urdf/: girona1000_moveit.xacro
