<?xml version="1.0"?>
<package format="2">
  <name>hrov_martech2023</name>
  <version>0.0.0</version>
  <description>The hrov_martech2023 package</description>

  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="srealper@todo.todo">srealper</maintainer>
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>
  <!-- <url type="website">http://wiki.ros.org/hrov_martech2023</url> -->
  <!-- <author email="jane.doe@example.com">Jane Doe</author> -->

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>

  <depend>eigen</depend>
  <depend>sensor_msgs</depend>
  <depend>message_filters</depend>
  <depend>filters</depend>
  <depend>laser_geometry</depend>
  <depend>pluginlib</depend>

  <depend>interactive_markers</depend>
  <depend>visualization_msgs</depend>

  <depend>eigen_conversions</depend>

  <depend>octomap_ros</depend>

  <!-- <depend>moveit_planners_ompl</depend> -->
  <!-- <depend>ompl</depend> -->

  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>shape_msgs</depend>
  <depend>octomap_msgs</depend>
  <depend>trajectory_msgs</depend>
  <depend>object_recognition_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>cola2_msgs</depend>

  <depend>rosbag</depend>
  <depend>urdf</depend>
  <depend>srdfdom</depend>
  <depend>geometric_shapes</depend>
  <depend>xmlrpcpp</depend>

  <depend>rviz_visual_tools</depend>

  <!-- cola pkgs -->
  <depend>girona1000_description</depend>
  <depend>cola2_girona1000</depend>
  <depend>stonefish_ros</depend>
  <depend>cola2_stonefish</depend>
  <!-- <depend>cola2_core</depend> -->
  <!-- <depend>iauv_simulation</depend> -->
  <depend>girona_utils</depend>
  <depend>iauv_kinematic_control</depend>
  <!-- cola pkgs -->

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>